# triager-omega

./: .gitignore  BUG_REPO_SCHEMA.md  CLAUDE.md  DESCRIPCION_DATASETS.md  PLAN.md  README.md  main.py  pyproject.toml
docs/: ajustes-a-la-propuesta.md  cbr-recuperacion.md  comparacion-openj9-que-tan-similar.md  comparacion-triagerx-openj9.md  diseno-corrida-oficial.md  entrenamiento-laptop.md  estado-tesis.md  gecko-dev-mining-status.md  mejora-destilacion-paralela.md  ollama-remoto.md  openj9-comparativa-explicada.md  openj9-mejoras-ibr-resultados.md  pipelines.html  resultados-cuda.md  resumen-proyecto.html  sesion-2026-06-08.md  triagerx-reimplementacion-hallazgos.md
scripts/: balance_experiment.py  build_discussion_interactions.py  build_openj9_50.py  cbr_retrieval_openj9.py  cbr_retrieval_pilot.py  eda.py  eval_openj9_full.py  eval_openj9_ibr.py  inspect_bug.py  inspect_distillations.py  mine_openj9_timelines.py  run_distillation.py  test_api.py  test_ollama.py  train_cbr.py  train_cbr_quick.py  train_openj9_cbr.py
scripts/triagerx_compat/: build_issue_data.py  eval_triagerx_full_omega.py  launch_full.ps1  run_full.bat  train_triagerx_omega.py
src/triager_omega/: __init__.py  config.py
src/triager_omega/cbr/: __init__.py  distillation.py  pilot.py  predict.py  train.py
src/triager_omega/modules/: __init__.py  aggregator.py  ibr.py
