[project]
name = "triager-omega"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "accelerate>=1.13.0",
    "datasets>=5.0.0",
    "google-genai>=1.0.0",
    "loguru>=0.7.3",
    "numpy>=2.4.6",
    "openai>=1.0.0",
    "pandas>=3.0.3",
    "protobuf>=7.35.0",
    "pyarrow>=24.0.0",
    "pydantic-settings>=2.14.1",
    "python-dotenv>=1.0.0",
    "rank-bm25>=0.2.2",
    "scikit-learn>=1.9.0",
    "sentence-transformers>=5.5.1",
    "sentencepiece>=0.2.1",
    "tiktoken>=0.13.0",
    "torch>=2.11.0",
    "transformers>=5.9.0",
]

# Índice de PyTorch con wheels CUDA 12.8 (RTX 5060 / Blackwell sm_120).
# Solo se aplica en Windows; en macOS torch se resuelve desde PyPI (build MPS/CPU).
[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = [
    { index = "pytorch-cu128", marker = "sys_platform == 'win32'" },
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/triager_omega"]
